--- a/solution.html
+++ b/solution.html
@@ -23,7 +23,7 @@
     </header>
     <div class="hero didact">
       <div class="container">
-        <div class="hero-cont">
+        <div class="hero-cont fading">
           <div class="hero-header">
             <h1>Bacon ipsum dolor amet turkey laborum cillum, pork porchetta chicken</h1>
           </div>
@@ -66,5 +66,8 @@
         </div>
       </div>
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
